[package]
name = "wwmts3gw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
audiopus = "0.2"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time", "signal"] }
tsclientlib = "0.2.0"
tsproto-packets = "0.1"
