[package]
name = "wwmts3gw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
audiopus = "0.2"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-bookkeeping = "0.1"
tsclientlib = "0.2.0"
tsproto-packets = "0.1"
